--- a/_config.yml
+++ b/_config.yml
@@ -212,9 +212,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
+  #portfolio:
+   # output: true
+   # permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
@@ -259,14 +259,14 @@ defaults:
       share: true
       comments: true
   # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
+  #- scope:
+   #   path: ""
+   #   type: portfolio
+   # values:
+  #    layout: single
+   #   author_profile: true
+   #   share: true
+   #   comment: true
   # _talks
   - scope:
       path: ""
